--- a/app/theme/_bookmarks.less
+++ b/app/theme/_bookmarks.less
@@ -34,4 +34,5 @@
 
   & when(@theme = 'light') { color: #444; }
   & when(@theme = 'dark') { color: #ccc; }
+  & when(@theme = 'solarized') { color: @solarized-base03; }
 }
