--- a/app/theme/_tip.less
+++ b/app/theme/_tip.less
@@ -13,4 +13,8 @@
     color: #eee;
     background-color: fade(#000, 70%);
   }
+  & when(@theme = 'solarized') {
+    color: @solarized-base3;
+    background-color: @solarized-base03;
+  }
 }
