--- a/app/theme/_folder.less
+++ b/app/theme/_folder.less
@@ -19,6 +19,7 @@
 
   & when(@theme = 'light') { background-color: #e9eaed; }
   & when(@theme = 'dark')  { background-color: #333; }
+  & when(@theme = 'solarized') { background-color: @solarized-base2; }
 }
 
 .AbstractFolderItem {
@@ -42,11 +43,19 @@
     background-color: #363636;
     border-color: transparent;
   }
+  & when(@theme = 'solarized') {
+    background-color: @solarized-base3;
+    border-color: transparent;
+  }
 }
 
 .AbstractFolderItemButton:hover {
   & when(@theme = 'light') { background-color: average(#fff, #e9eaed); }
   & when(@theme = 'dark')  { background-color: #555; }
+  & when(@theme = 'solarized') {
+    background-color: average(@solarized-base2, @solarized-base3);
+    box-shadow: 0 0 (@size-folder-item-margin * 3) @solarized-base1;
+  }
 }
 
 .AbstractFolderItemButtonBody {
