--- a/app/theme/_topsites.less
+++ b/app/theme/_topsites.less
@@ -15,6 +15,7 @@
 .TopSites:extend(.AbstractFolder) {
   & when(@theme = 'light') { background-color: fade(#fff, 80%); }
   & when(@theme = 'dark')  { background-color: fade(#000, 70%); }
+  & when(@theme = 'solarized') { background-color: fade(@solarized-base2, 75%); }
 }
 
 .TopSitesItem:extend(.AbstractFolderItem) {}
