Use inline-block align instead of float

--- a/app/theme/_bookmarks.less
+++ b/app/theme/_bookmarks.less
@@ -25,8 +25,8 @@
 
 .BookmarkFolderHeading:extend(.AbstractFolderItem) {
   width: @size-bookmark-width;
-  height: @size-bookmark-height;
-  padding: 1px;
+  margin-left: 2px;
+  vertical-align: top;
 }
 
 .BookmarkFolderHeadingTitle {
