--- a/app/theme/_folder.less
+++ b/app/theme/_folder.less
@@ -23,7 +23,7 @@
 }
 
 .AbstractFolderItem {
-  float: left;
+  display: inline-block;
   margin-bottom: @size-folder-item-margin;
   margin-right: @size-folder-item-margin;
 }
