Add chrome apps

--- a/app/theme/_bookmarks.less
+++ b/app/theme/_bookmarks.less
@@ -17,6 +17,7 @@
 .BookmarkItemButtonBody:extend(.AbstractFolderItemButtonBody) {
   background-position-x: @size-folder-item-padding;
   background-position-y: @size-folder-item-padding;
+  background-size: 16px;
 }
 
 .BookmarkFolderHeading:extend(.AbstractFolderHeading) {
