--- a/src/view/Main.css
+++ b/src/view/Main.css
@@ -1,2 +1,48 @@
 .Main {
+  background-color: var(--palette-3);
+  color: var(--palette-03);
+}
+
+.theme-light {
+  --palette-03: #2b2b2b;
+  --palette-02: #363636;
+  --palette-01: #6e6e6e;
+  --palette-00: #7b7b7b;
+  --palette-0: #949494;
+  --palette-1: #a1a1a1;
+  --palette-2: #eeeeee;
+  --palette-3: #fdfdfd;
+}
+
+.theme-dark {
+  --palette-3: #2b2b2b;
+  --palette-2: #363636;
+  --palette-1: #6e6e6e;
+  --palette-0: #7b7b7b;
+  --palette-00: #949494;
+  --palette-01: #a1a1a1;
+  --palette-02: #eeeeee;
+  --palette-03: #fdfdfd;
+}
+
+.theme-solarized-light {
+  --palette-03: #002b36;
+  --palette-02: #073642;
+  --palette-01: #586e75;
+  --palette-00: #657b83;
+  --palette-0: #839496;
+  --palette-1: #93a1a1;
+  --palette-2: #eee8d5;
+  --palette-3: #fdf6e3;
+}
+
+.theme-solarized-dark {
+  --palette-3: #002b36;
+  --palette-2: #073642;
+  --palette-1: #586e75;
+  --palette-0: #657b83;
+  --palette-00: #839496;
+  --palette-01: #93a1a1;
+  --palette-02: #eee8d5;
+  --palette-03: #fdf6e3;
 }
