--- a/src/view/bar/index.css
+++ b/src/view/bar/index.css
@@ -25,6 +25,7 @@
   padding-bottom: calc(var(--size-folder-padding-y) - var(--size-folder-item-margin));
   padding-left: var(--size-folder-padding-x);
   padding-right: calc(var(--size-folder-padding-x) - var(--size-folder-item-margin));
+  background-color: var(--palette-2);
 }
 
 .BarFolderItem {
@@ -43,9 +44,12 @@
   border-radius: 3px;
   width: var(--size-folder-item-width);
   height: var(--size-folder-item-height);
+  background-color: var(--palette-3);
 }
 
 .BarFolderItem__Button:hover {
+  background-color: var(--palette-2);
+  box-shadow: 0 0 calc(var(--size-folder-item-margin) * 3) var(--palette-01);
 }
 
 .BarFolderItem__ButtonBody {
@@ -78,4 +82,9 @@
 
 .BarFolderItem__TipBody {
   margin-top: var(--size-folder-padding-y);
+  padding: 5px;
+  border-radius: 3px;
+  color: var(--palette-3);
+  background-color: var(--palette-03);
+  opacity: 0.8;
 }
