--- a/src/view/theme/index.css
+++ b/src/view/theme/index.css
@@ -1,9 +1,4 @@
-.Main {
-  background-color: var(--palette-3);
-  color: var(--palette-03);
-}
-
-.theme-light {
+:root.Theme__light {
   --palette-03: #2b2b2b;
   --palette-02: #363636;
   --palette-01: #6e6e6e;
@@ -14,7 +9,7 @@
   --palette-3: #fdfdfd;
 }
 
-.theme-dark {
+:root.Theme__dark {
   --palette-3: #2b2b2b;
   --palette-2: #363636;
   --palette-1: #6e6e6e;
@@ -25,7 +20,7 @@
   --palette-03: #fdfdfd;
 }
 
-.theme-solarized-light {
+:root.Theme__solarized-light {
   --palette-03: #002b36;
   --palette-02: #073642;
   --palette-01: #586e75;
@@ -36,7 +31,7 @@
   --palette-3: #fdf6e3;
 }
 
-.theme-solarized-dark {
+:root.Theme__solarized-dark {
   --palette-3: #002b36;
   --palette-2: #073642;
   --palette-1: #586e75;
