--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
+/* background-color is defined at index.html */
+
 body {
   margin: 0;
-
-  background-color: var(--palette-3);
   color: var(--palette-03);
-
   font-family: sans-serif;
 }
 
