Improve screen flicker on load (#110)
* Improve screen flicker on load

* Fix index.css

* Fix test

* Remove palette from index.html

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-body {
-  margin: 0;
-
+:root {
+  /* override background-color in index.html */
   background-color: var(--palette-3);
   color: var(--palette-03);
+}
 
+body {
+  margin: 0;
   font-family: sans-serif;
 }
 
